tests/programs/invalid/long.java
public class long {
  protected long x;
}